manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webhook-server
  name: webhook-server
  namespace: webhook-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
      - image: nicktriller/mutating-webook-admission-server-demo:latest
        imagePullPolicy: Always
        name: server
        volumeMounts:
        - name: certificate
          mountPath: /app/certificate
      volumes:
      - name: certificate
        secret:
          secretName: webhook-server-certificate
