manifests/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: webhook-server
  name: pod-injector
  namespace: webhook-demo
webhooks:
- name: pod-injector.nicktriller.com
  failurePolicy: Fail
  objectSelector:
    matchLabels:
      inject: "true"
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    scope: "Namespaced"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  clientConfig:
    # base64-encoded PEM bundle containing the CA that signed the webhook's service certificate
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlDeXpDQ0FiTUNGRVRlS3JGOVRjdlVXQU1hK0JhV3pNUmVxK0loTUEwR0NTcUdTSWIzRFFFQkN3VUFNQm94DQpHREFXQmdOVkJBTU1EMWRsWW1odmIyc2dSR1Z0YnlCRFFUQWVGdzB5TURBMU1UWXhNVFE0TXpkYUZ3MHlNREEyDQpNVFV4TVRRNE16ZGFNQ294S0RBbUJnTlZCQU1NSDNkbFltaHZiMnN0YzJWeWRtVnlMbmRsWW1odmIyc3RaR1Z0DQpieTV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUN3YVpMTGk1OExBck94DQp0MEVNaS9xSzNRaEFqRmV3WGdTdGFjVXhZbzdLa3dpWEpSV3JoR2Z3SjFDN0lxenY3ZHhOWUVvQmtCV1NiN2w2DQpXU0VtW [...]
    service:
      namespace: webhook-demo
      name: webhook-server
      path: /
      port: 443
